--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -698,6 +698,10 @@ h3, .h3 {
   font-size: 9rem;
   font-family: $font-family-work-sans-thin;
   opacity: 1;
+  @include media-breakpoint-down(md) {
+    font-size: 8vw;
+    width: 8vw;
+  }
 
   &:focus,
   &:hover {
@@ -707,7 +711,7 @@ h3, .h3 {
 
 .carousel-control.left {
   background-image: none;
-  left: 19%;
+  left: 0;
 }
 
 .carousel-control.right {
